@@ -42,6 +42,7 @@ The following bugs are resolved with this release:
   [25933] Off by one error in __strncmp_avx2
   [25976] nss_compat: internal_end*ent may clobber errno, hiding ERANGE
   [27130] "rep movsb" performance issue
+  [27177] GLIBC_TUNABLES=glibc.cpu.x86_ibt=on:glibc.cpu.x86_shstk=on doesn't work
 
 Security related changes:
 
